Add react datagrid

--- a/templates/react.html.twig
+++ b/templates/react.html.twig
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>BiznesPaczki.pl - Zestawy upominkowe</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('public/img/favicon.ico') }}" />
-
+    <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
     {# -------------------------------------------------------------------------------------------------- STYLESHEETS #}
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
