--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,3 +7,4 @@ $web-font-path: 'data:text/css;base64,';
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~bootswatch/flatly/bootswatch";
 @import "~font-awesome/scss/font-awesome.scss";
+@import "~react-table/react-table.css";
