Add user collection route

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3,6 +3,7 @@
 // see https://github.com/thomaspark/bootswatch/issues/55#issuecomment-298093182
 $web-font-path: 'data:text/css;base64,';
 
+@import "variables";
 @import "bootstrap";
 @import "site";
 //@import "~bootstrap/dist/css/bootstrap";
