Add tooltip to guild squad grid
remove squad
fixes

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -12,3 +12,4 @@ $web-font-path: 'data:text/css;base64,';
 //@import "~bootswatch/flatly/bootswatch";
 @import "~font-awesome/scss/font-awesome.scss";
 @import "~react-table/react-table.css";
+@import "~react-confirm-alert/src/react-confirm-alert.css";
