--- a/templates/react.html.twig
+++ b/templates/react.html.twig
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>BiznesPaczki.pl - Zestawy upominkowe</title>
+    <title>Star Wars Galaxy of Heoros - guild manager tool</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('public/img/favicon.ico') }}" />
     <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
     {# -------------------------------------------------------------------------------------------------- STYLESHEETS #}
