--- a/templates/react.html.twig
+++ b/templates/react.html.twig
@@ -8,6 +8,8 @@
     <meta charset="utf-8">
     <meta name="author" content="">
     <meta name="keywords" content="">
+
+    <link rel="icon" sizes="24x24" href="/favicon.ico">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Star Wars Galaxy of Heoros - guild manager tool</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('public/img/favicon.ico') }}" />
