Fix layout + bootstrap

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,3 +13,4 @@ $web-font-path: 'data:text/css;base64,';
 @import "~font-awesome/scss/font-awesome.scss";
 @import "~react-table/react-table.css";
 @import "~react-confirm-alert/src/react-confirm-alert.css";
+//@import "~bootswatch/flatly/bootstrap.css";
