--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -1,7 +1,9 @@
 body {
-    font-size: .875rem;
+    font-size: 1.25rem;
 }
-
+.btn, input, button{
+    font-size: 14px;
+}
 .feather {
     width: 16px;
     height: 16px;
@@ -137,11 +139,61 @@ body {
     overflow: visible;
 }
 
-
+.navbar.main {
+    margin: 0;
+}
 .fade.in {
     opacity: 1;
 }
-
+.mt-20 {
+    margin-top: 20px;
+}
 .mr-20 {
     margin-right: 20px;
+}
+
+.top-nav-button {
+    line-height: 50px;
+    margin: 0 20px;
+    font-size: 16px;
+    color: #FFF;
+}
+
+@media (max-width: 768px) {
+    .left-sidebar {
+        align-items: start;
+        width: 100%;
+        > div.container {
+            width: 100%;
+            display: block;
+            flex-direction: row;
+        }
+    }
+}
+
+.left-sidebar {
+    > .container {
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+    .navbar-collapse {
+        margin: 0 5px !important;
+        padding: 0 !important;
+        width: 100%;
+    }
+    h4 {
+        margin-top: 20px;
+    }
+    .nav {
+        width: 100%;
+        li {
+            a {
+                font-size: 14px;
+                padding: 5px 0;
+            }
+        }
+        .nav-link {
+            color: #000;
+        }
+    }
 }
