--- a/templates/react.html.twig
+++ b/templates/react.html.twig
@@ -14,6 +14,8 @@
     <title>Star Wars Galaxy of Heoros - guild manager tool</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('public/img/favicon.ico') }}" />
     <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     {# -------------------------------------------------------------------------------------------------- STYLESHEETS #}
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
@@ -32,6 +34,7 @@
 {# ------------------------------------------------------------------------------------------------------ JAVASCRIPTS #}
 {% block javascripts %}
     <script src="{{ asset('build/js/app.js') }}"></script>
+    <script src="{{ asset('build/js/scripts.js') }}"></script>
 {% endblock %}
 
 {# ----------------------------------------------------------------------------------------------- JAVASCRIPTS_INLINE #}
